<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- PERGUNTA -->
    <TextView
        android:id="@+id/txtPergunta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/pergunta_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/bandeira2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- BANDEIRA DO BRASIL -->
    <ImageView
        android:id="@+id/bandeira2"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:src="@drawable/brasil"
        android:contentDescription="@string/bandeira_brasil"
        app:layout_constraintTop_toBottomOf="@id/txtPergunta2"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"/>

    <!-- RESPOSTAS -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/bandeira2"
        app:layout_constraintBottom_toTopOf="@id/btnProximo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alt_samaria" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alt_venezuela" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alt_marrocos" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alt_brasil" />

    </RadioGroup>

    <!-- BOTÃO -->
    <Button
        android:id="@+id/btnProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_proximo"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>